Fixing color contrast issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,7 +113,7 @@ main h2 {
   background-color: rgba(var(--light-color-rgb), 0.7);
 }
 
-#action > figure > figcaption > h3 {
+#action > figure > figcaption > h1 {
   margin: 0;
   padding: 0;
   font-size: 1.5rem;
@@ -137,7 +137,7 @@ main h2 {
   font-size: 1rem;
   font-weight: 600;
   background-color: var(--info-color);
-  color: var(--white-color);
+  color: var(--black-color);
   user-select: none;
 
   border: none;
